<resources>
    <string name="app_name">Stack Exchange </string>
    <!--//DemoProject-1-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_use_detail_activity">User Detail</string>
    <string name="progress_title">Please Wait…</string>

    <string name="menu_open_in_browser_title">Open In Browser</string>
    <string name="menu_copy_to_clipboard">Copy to ClipBoard</string>
    <string name="menu_share">Share </string>
    <string name="string_detail_not_found">User has not Asked or answered any Question yet…</string>
    <string name="post_question_type">Question</string>
    <string name="post_answer_type">Answer</string>

    <!-- NAVIGATION DRAWER -->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_users_title">Users</string>
    <string name="menu_questions_title">Questions</string>
    <string name="menu_tags_title">Tags</string>
    <string name="menu_search">Search</string>
    <string name="menu_option" />
    <string name="answer_count_demo">33607</string>
    <string name="answers_count_text">answers</string>
    <string name="question_count_demo">42</string>
    <string name="questions_count_text">questions</string>
    <string name="view_count_demo">1350494</string>
    <string name="total_views_text">total views</string>
    <string name="question_type">Question_Type</string>
    <string name="question_title">Question_title</string>
    <string name="question_body">Question_Body</string>
    <string name="list_raw_user_name">User_Name</string>
    <string name="reputation_demo">93.9k</string>
    <string name="badge_gold_demo">20</string>
    <string name="badge_silver_demo">33</string>
    <string name="badge_bronze_demo">32</string>
    <string name="order_dialog_fragment">Order</string>
    <string name="sort_dialog_fragment">Sort</string>
    <string name="from_date_dialog_fragment">From Date</string>
    <string name="pick_from_here_dialog_fragment">Pick From Here</string>
    <string name="to_date_dialog_fragment">To Date</string>
    <string name="btn_pick_from_here_dialog_fragment">Pick From Here</string>

    <string name="btn_yes_dialog_fragment">Yes</string>
    <string name="btn_no_dialog_fragment">No</string>
    <string name="btn_reset_dialog_fragment">Reset</string>

    <string name="nav_header_text">Guest User</string>
    <string name="user_item_demo_user">Jon Skeet</string>
    <string name="user_itm_demo_reputation">933k</string>
    <string name="user_itm_demo_gold_badge">7671</string>
    <string name="user_itm_demo_silver_badge">6819</string>
    <string name="user_itm_demo_bronze_badge">527</string>
    <string name="user_detail_exception_activity_fragment">User Detail Not Available. . .</string>
    <string name="profile_fragment_title">PROFILE</string>
    <string name="activity_fragment_title">ACTIVITY</string>

    <!-- Question Drawer Strings -->

    <string name="question_drawer_username_demo_name">GManNickG</string>
    <string name="question_drawer_creation_date">22 Mar at 6.35</string>
    <string name="question_drawer_tags">java,c++,performance,optimization,beanch-prediation</string>
    <string name="question_drawer_question_title">Question Title</string>
    <string name="question_drawer_reputation_demo">17.4k</string>

    <string name="dialog_tag">dialog</string>
    <string name="text_to_date_error">To date must be greater than from date.</string>

    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_profile">Profile</string>

    <string name="nav_user_detail_title">Users</string>
    <string name="nav_question_detail_title">Questions</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_tag_title">Tags</string>

    <string name="orderPrompt">Choose an order</string>
    <string name="sortPrompt">Sort by</string>


    <string-array name="spinnerUserOrder">
        <item>desc</item>
        <item>asc</item>
    </string-array>


    <string-array name="spinnerUserSort">
        <item>reputation</item>
        <item>creation</item>
        <item>modified</item>
        <item>name</item>
    </string-array>

    <string-array name="spinnerQuestionSort">
        <item>votes</item>
        <item>activity</item>
        <item>hot</item>
        <item>week</item>
        <item>month</item>
        <item>Creation</item>
    </string-array>

    <string-array name="navigation_drawer_items_array">
        <item>Users</item>
        <item>Questions</item>
        <item>Tags</item>
    </string-array>

    <string-array name="tag_spinner_array">
        <item>Popular</item>
        <item>Name</item>
        <item>Activity</item>
    </string-array>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="search_tag_edit_text_hint">Search Tags</string>

    <string name="siteTitle">All Sites</string>

    <string name="open_dialog_from_question_drawer">questionDrawer</string>
    <string name="open_dialog_from_user_drawer">userDrawer</string>
    <string name="text_no_detail_found">No Detail Found</string>
    <string name="error">Failed To Load Application Data\n Please Try Again…</string>
    <string name="btn_try_again_splash">Try Again…</string>

    <string name="alert_dialog_text">Pakku...?</string>
    <string name="alert_dialog_positive_btn">Yes </string>
    <string name="alert_dialog_negative_btn">Cancel</string>

    <string name="siteMain">stackoverflow</string>
    <string name="site_name_item_site_detail">Site Name</string>
    <string name="site_description_item_site_detail">Site Description</string>
    <string name="tag_name_item_tag">Tag Name</string>
    <string name="tag_count_item_tag">Tag Count</string>
    <string name="site_name_nav_header">Site Name</string>
    <string name="copied_to_clipboard">"Copied to ClipBoard "</string>
    <string name="failed_copy_to_clipboard">Failed to Copy on ClipBoard</string>
    <string name="share_profile_set_type">text/plain</string>


</resources>


