<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_post_type"
        android:layout_width="25dp"
        android:src="@drawable/ic_question_profile_fragment"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_post_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/userName"
            android:text="@string/question_type"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_title"
            android:textStyle="bold"
            android:textSize="@dimen/badge_text_size" />

        <TextView
            android:id="@+id/text_post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/question_body"
           android:textSize="@dimen/badge_text_size" />

    </LinearLayout>
</LinearLayout>