<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative_layout_splash_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/image_view_splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_app_launcher_icon"
            />

        <TextView
            android:id="@+id/text_app_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_splash"
            android:gravity="center_horizontal"
            android:text="@string/app_name"

            android:textSize="20sp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar_loading_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout_splash_screen"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/btn_try_again_splash"
        android:textColor="@color/colorRedForSplash"
        android:textSize="15sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_try_again"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/error"
        android:textColor="@color/colorRedForSplash"
        android:textSize="12sp"
        android:visibility="gone" />
</RelativeLayout>