<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="110dp"
        android:id="@+id/linear_layout_score"
        android:orientation="vertical"
        android:background="@color/colorIsAnswerTrue">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_score"
                android:text="@string/question_drawer_reputation_demo"
                android:textColor="@color/colorScore"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/image_score"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="25dp"
                android:src="@drawable/ic_change_history_black_24dp"
                android:scaleType="fitXY" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_total_answer"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorTotalAnswer"
                android:layout_marginLeft="7dp"
                android:text="14"
                android:gravity="center_horizontal"/>
            <ImageView
                android:id="@+id/image_answer"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="25dp"
                android:src="@drawable/ic_answer_green"
                android:scaleType="fitXY" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="0">
        <TextView
            android:id="@+id/text_question_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorQuestionTitle"
            android:text="@string/question_drawer_question_title"
            android:textStyle="bold"
            android:textSize="@dimen/text_question_title_question_detail"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginBottom="2dp"
            android:layout_weight="0"/>
        <TextView
            android:id="@+id/text_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTags"
            android:layout_weight="0"
            android:text="@string/question_drawer_tags"
            android:ellipsize="end"
            android:maxLines="2"
            android:textSize="@dimen/text_question_title_question_detail" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/text_question_creation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/colorQuestionCreationDate"
                android:textSize="12sp"
                android:text="@string/question_drawer_creation_date"
               />
            <TextView
                android:id="@+id/text_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorQuestionUserName"
                android:text="@string/question_drawer_username_demo_name"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
